# adv-mancala

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  cmakeconfig.h.in  mancalarules.txt  rules.txt
.travis/: before_install.ps1
src/: CMakeLists.txt  game.cc  game.h  main.cc  main.h  mancala.cc  mancala.h  move_queue.h  pockets.cc  pockets.h  spritemap.xcf  test_mancala.cc  test_pockets.cc  test_saving.cc
test/: CMakeLists.txt
